Update files to UTF-8 encoding.

--- a/Resources/Latex2.bib
+++ b/Resources/Latex2.bib
@@ -1,4 +1,4 @@
-﻿@ARTICLE{
+@ARTICLE{
 8081853, 
 author={X. Li and M. A. Salehi and M. Bayoumi and N. F. Tzeng and R. Buyya}, 
 journal={IEEE Transactions on Parallel and Distributed Systems}, 
