--- a/Resources/Latex5.bib
+++ b/Resources/Latex5.bib
@@ -1,4 +1,4 @@
-﻿@ARTICLE{
+@ARTICLE{
 7470609, 
 author={N. Desai and R. Zhao and D. Szafron}, 
 journal={IEEE Transactions on Computational Intelligence and AI in Games}, 
