--- a/Resources/Latex6.bib
+++ b/Resources/Latex6.bib
@@ -1,4 +1,4 @@
-﻿@ARTICLE{
+@ARTICLE{
 6624114, 
 author={B. Dietrich and D. Goswami and S. Chakraborty and A. Guha and M. Gries}, 
 journal={IEEE Transactions on Computers}, 
