--- a/Resources/Latex7.bib
+++ b/Resources/Latex7.bib
@@ -1,4 +1,4 @@
-﻿@ARTICLE{
+@ARTICLE{
 8031074, 
 author={A. Sánchez-Macián and P. Reviriego and J. Tabero and A. Regadío and J. A. Maestro}, 
 journal={IEEE Transactions on Device and Materials Reliability}, 
