--- a/Resources/Latex9.bib
+++ b/Resources/Latex9.bib
@@ -1,4 +1,4 @@
-﻿@ARTICLE{
+@ARTICLE{
 8276304, 
 author={G. M. Tang and P. Y. Qu and X. C. Ye and D. R. Fan}, 
 journal={IEEE Transactions on Applied Superconductivity}, 
